<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DecisionFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="TextView"
            android:textSize="18sp" />

        <FrameLayout
            android:id="@+id/decision_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b_hero_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/info" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/b_draw_erase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/erase" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/b_north"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/north" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/b_west"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/west" />

                        <Button
                            android:id="@+id/b_east"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/east" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/b_south"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/south" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/b_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/up" />

                    <Button
                        android:id="@+id/b_down"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/down" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/b_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/search" />

                    <Button
                        android:id="@+id/b_use_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/useItem" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>