<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DescriptionFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/game_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="62dp"
            android:layout_weight="1"
            android:text="@string/selected_type"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/game_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="144dp"
            android:layout_weight="4"
            android:text="@string/game_description"
            android:textAlignment="center"
            android:textSize="26sp" />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="120dp"
            android:text="@string/enter_button" />
    </LinearLayout>

</FrameLayout>