<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#454545"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:columnCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/cave_button"

                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:width="0dp"
                android:background="@mipmap/cave_launcher_foreground"
                android:text="@string/cave"
                android:textColor="@color/paper"
                android:textSize="24sp" />

            <Button
                android:id="@+id/tower_button"
                android:width="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:background="@mipmap/tower_launcher_foreground"
                android:text="@string/tower"
                android:textColor="@color/paper"
                android:textSize="24sp" />

            <Button
                android:id="@+id/water_button"
                android:width="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:background="@mipmap/watertemple_launcher_foreground"
                android:text="@string/water"
                android:textColor="@color/paper"
                android:textSize="24sp" />


        </GridLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>